--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   http: ^0.12.0+4
+  shared_preferences: ^0.5.6+3
   regexed_validator:
     git:
       url: git@github.com:NickBonet/regexed_validator.git
