--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
+  mobx: ^1.1.1
+  flutter_mobx: ^1.1.0
   regexed_validator:
     git:
       url: git@github.com:NickBonet/regexed_validator.git
@@ -30,6 +32,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  build_runner: 
+  mobx_codegen: ^1.0.3
   flutter_test:
     sdk: flutter
 
