--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
   mobx: ^1.1.1
+  provider: ^4.0.5
   flutter_mobx: ^1.1.0
   regexed_validator:
     git:
