--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   mobx: ^1.1.1
   fluro: ^1.6.3
+  flutter_dotenv: ^2.1.0
   provider: ^4.0.5
   flutter_mobx: ^1.1.0
   regexed_validator:
@@ -55,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
